<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/Alarmsetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarmmode"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30dp"
        />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Alarmsetting">

         <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/sound"
        android:layout_below="@+id/Alarmsetting"/>

         <RadioButton
        android:id="@+id/radio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/vibration"
        android:layout_below="@+id/radio1"/>
         <RadioButton
        android:id="@+id/radio3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/soundandvib"
        android:layout_below="@+id/radio2"/>
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media"
        android:layout_below="@+id/seekBar"
        android:id="@+id/warn"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarmvolumeset"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/radioGroup"
        android:layout_marginTop="30dp"/>


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:text="@string/save"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentRight="true"
        android:background="@drawable/startpause_button"
        android:textColor="@color/black"/>



</RelativeLayout>